# dataloom

./: README.md
dataloom-backend/: pyproject.toml  test.db
dataloom-backend/alembic/versions/: c3d4e5f6a7b8_add_transformation_pipelines.py
dataloom-backend/app/: config.py  models.py  schemas.py
dataloom-backend/app/api/endpoints/: projects.py  transformations.py
dataloom-backend/app/services/: file_service.py  project_service.py  quality_service.py  transformation_service.py
dataloom-backend/app/utils/: pandas_helpers.py
dataloom-backend/tests/: test_data_profile.py  test_new_features.py  test_quality_assessment.py  test_transformations.py  test_upload.py
dataloom-frontend/src/Components/: DataProfilePanel.jsx  DataScreen.jsx  DataVisualization.jsx  Homescreen.jsx  MenuNavbar.jsx  Table.jsx
dataloom-frontend/src/Components/__tests__/: DataProfilePanel.test.jsx
dataloom-frontend/src/Components/forms/: ComputedFormulaForm.jsx  DropDuplicateForm.jsx  FilterForm.jsx  JoinProjectForm.jsx  PivotTableForm.jsx  SortForm.jsx
dataloom-frontend/src/Components/history/: PipelinesPanel.jsx
dataloom-frontend/src/Components/quality/: QualityPanel.jsx
dataloom-frontend/src/api/: index.js  projects.js  transforms.js
dataloom-frontend/src/constants/: operationTypes.js  operationTypes.test.js
dataloom-frontend/src/context/: ProjectContext.jsx
dataloom-frontend/src/utils/: visualization.js
dataloom-frontend/src/utils/__tests__/: visualization.test.js
